index & connections  mvp

--- a/connections.html
+++ b/connections.html
@@ -313,3 +313,4 @@
 <!-- include feature of one away --> 
 <!-- filling of buttons should invert colors -->
 <!-- mistakes + lifes should not shift-->
+<!-- Transition when correct category: 4 correct go to top row. top row tiles relocate to the other 4. top 4 merge into one tile that dilates and finally forms the row.-->
