functional wordle, need to adapt to iphone 14 screen though

--- a/strands.html
+++ b/strands.html
@@ -53,7 +53,7 @@
   }
   .found-count { margin: 4px 0; }
   .current-word { font-size: 24px; text-align: center; min-height:28px; }
-  .current-word.error { color: red; } /* Visual cue for error messages */
+  .current-word.error { font-size: 20px; color: rgb(3, 3, 3); } /* Visual cue for error messages */
 
   .grid {
     position: relative;
@@ -464,3 +464,4 @@ updateHintButton();
 </body>
 </html>
 <!-- Mostrar SPANGRAM and WORDS when found --> 
+<!-- Clear path when word already found-->
