--- a/wordle.html
+++ b/wordle.html
@@ -29,10 +29,10 @@
   }
 
   .container{
-    width:min(450px, 92vw);
+    width:min(320px, 92vw);
     display:flex;
     flex-direction:column;
-    gap:20px;
+    gap:30px;
     align-items:center;
   }
 
@@ -65,7 +65,7 @@
   }
 
   .tile.filled {
-    border-color: #000; /* black border when letter typed */
+    border-color: #888A8C; /* black border when letter typed */
   }
 
   /* Colors after evaluation */
@@ -90,21 +90,22 @@
     width:100%;
     display:flex;
     flex-direction:column;
-    gap:8px;
+    gap:5px;
     user-select:none;
   }
   .krow{
     display:flex;
-    gap:8px;
+    gap:5px;
     justify-content:center;
   }
   .key{
-    padding: 10px 12px;
+    padding: 15px 10px; /* Increased vertical padding for taller keys */
     min-width: 40px;
-    border-radius:6px;
+    min-height: 50px; /* Added minimum height for consistency */
+    border-radius: 6px;
     background: var(--keyboard-gray);
     color: #111827;
-    font-weight:700;
+    font-weight:600;
     text-transform:uppercase;
     display:flex;
     justify-content:center;
@@ -113,8 +114,17 @@
     border: none;
     box-shadow: none;
     user-select:none;
+    font-size: 17px;
   }
-  .key.big{ min-width: 64px; padding-left:14px; padding-right:14px; }
+  .key.big{ min-width: 64px; padding-left:14px; padding-right:14px; min-height: 50px; font-size: 12px; }
+    /* Specific styling for Enter key */
+  .key[data-key="enter"] {
+    font-size: 12px; /* Larger font size for Enter */
+    }
+    /* Specific styling for Back key */
+  .key[data-key="back"] {
+    font-size: 16px; /* Smaller font size for Back */
+    }
   .key.green{ background: var(--green); color: #fff; }
   .key.yellow{ background: var(--yellow); color: #fff; }
   .key.dark{ background: var(--kbd-dark); color: #fff; }
@@ -127,8 +137,8 @@
   }
 
   @media (max-width:420px){
-    .key{ padding:8px 8px; min-width:34px; font-size:13px; }
-    .key.big{ min-width:60px; }
+    .key{ padding: 12px 8px; min-width: 34px; min-height: 40px; font-size: 13px; }
+    .key.big{ min-width: 60px; min-height: 40px; }
   }
 
   .tile.flip {
@@ -365,33 +375,34 @@
       }, i * 400); // stagger tiles one after another
     }
 
-    // Update keyboard colors (priority: green > yellow > dark/gray)
-    setTimeout(()=>{
-      for (let i=0; i<WORD_LENGTH; i++){
+    // Update keyboard colors only after the last tile flip is complete
+    const lastTileDelay = (WORD_LENGTH - 1) * 400 + 600; // Total time for last tile to finish flipping
+    setTimeout(() => {
+      for (let i = 0; i < WORD_LENGTH; i++) {
         const ch = guess[i];
         updateKeyColor(ch, result[i]);
       }
-    }, 180);
+    }, lastTileDelay);
 
     // Move to next row
     if (guess === solution){
-      setTimeout(()=> {
+      setTimeout(() => {
         setStatus("You win! 🎉");
         gameOver = true;
-      }, 600);
+      }, lastTileDelay);
       // Lock winning row colored; no further input
     } else {
       currentRow++;
       currentCol = 0;
       if (currentRow >= MAX_ROWS){
-        setTimeout(()=> {
+        setTimeout(() => {
           setStatus(`Game over — solution was "${solution.toUpperCase()}"`);
           gameOver = true;
-        }, 600);
+        }, lastTileDelay);
       } else {
-        setTimeout(()=> {
+        setTimeout(() => {
           setStatus('');
-        }, 600);
+        }, lastTileDelay);
       }
     }
   }
@@ -422,13 +433,13 @@
     statusEl.textContent = text;
     if (!text) return;
     clearTimeout(statusEl._timer);
-    statusEl._timer = setTimeout(()=> {
+    statusEl._timer = setTimeout(() => {
       if (statusEl.textContent === text) statusEl.textContent = '';
     }, 1600);
   }
 
   // --- Physical keyboard support ---
-  window.addEventListener('keydown', (e)=>{
+  window.addEventListener('keydown', (e) => {
     if (gameOver) return;
     if (e.key === 'Enter'){
       onKey('enter');
