add headers to minigames

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
   <header>
     <img src="icons/nyt_games.png" alt="The New York Times Logo" class="nyt-logo">
     <div class="date">Sunday, 9th of November</div>
+    <small style="color:#6b7280; margin-top:0px;text-align: center;">Recopilación de nuestras aventuras en nuestro formato favorito.</small>
   </header>
 
   <div class="games-list">
@@ -109,7 +110,7 @@
     <a href="wordle.html" class="game-tile wordle">
       <div class="game-info">
         <span class="game-name">Wordle</span>
-        <span class="game-subtitle">Guess your way to the correct word.</span>
+        <span class="game-subtitle">A way to make a bit better your least favourite one.</span>
         <span class="games-date">Sunday, 9 Nov</span>
       </div>
       <img src="icons/wordle.png" alt="Wordle Logo" class="game-logo">
@@ -144,9 +145,11 @@
       </div>
       <img src="icons/mini.png" alt="The Mini Logo" class="game-logo">
     </a>
+    <small style="color:#6b7280; margin-top:0px;text-align: center;">Made with ♡ by Rodri</small>
   </div>
 </body>
 </html>
 
 <!-- subtitle letters thinner, other font maybe --> 
 <!-- personalize subtitles in wordle,mini and (strands) --> 
+<!-- maybe include header bar with nyt logo and replace nytlogo in other headers for back button --> 
