--- a/connections.html
+++ b/connections.html
@@ -8,10 +8,28 @@
       font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
       background: #f8f9fa;
       margin: 0;
-      padding: 20px;
+      padding: 75px 20px 20px 20px;
       display: flex;
       flex-direction: column;
       align-items: center;
+    }
+    .topbar {
+      width: 100%;
+      background: #ffffff; 
+      border-bottom: 1px solid #e5e7eb; 
+      display: flex;
+      align-items: center;
+      padding: 8px 12px;
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 1000;
+    }
+    
+    .topbar-icon {
+      height: 40px;
+      width: 145px;
+      cursor: pointer;
     }
     h1 {
       font-weight: 400;
@@ -159,6 +177,11 @@
   </style>
 </head>
 <body>
+  <div class="topbar">
+    <a href="index.html">
+      <img src="icons/nyt_logo.png" alt="Back" class="topbar-icon">
+    </a>
+  </div>
   <h1>Create four groups of four!</h1>
   <div class="grid" id="grid"></div>
   
