--- a/strands.html
+++ b/strands.html
@@ -81,6 +81,7 @@
     background: white;
     border-radius: 8px;
     box-shadow: 0 2px 6px rgba(0,0,0,0.06);
+    touch-action: none;  /* Prevents default touch scroll/zoom on letters */
   }
 
   .row { display: flex; }
@@ -89,6 +90,7 @@
     display: flex; align-items: center; justify-content: center;
     font-size: 20px; cursor: pointer; color: black;
     position: relative; user-select: none; z-index: 1;
+    touch-action: none;  /* Prevents default touch scroll/zoom on letters */
   }
 
   .letter.selected::after,
@@ -141,6 +143,13 @@
     z-index: 0;
     overflow: visible;
   }
+
+  /* Optional: Reduce padding for mobile fit (add media query) */
+  @media (max-width: 768px) {
+    body {
+      padding: 60px 20px 20px;  /* Less left/right padding, top for topbar */
+    }
+  }
 </style>
 </head>
 <body>
@@ -187,6 +196,66 @@ const wordToPath = {
   'ANGELA': [[7,2],[7,3],[7,4],[7,5],[6,5],[5,5]],
   'GUITARSARA': [[2,0],[1,0],[0,0],[0,1],[0,2],[0,3],[0,4],[0,5],[1,5],[2,5]]
 };
+
+// Helper to get [row, col] from a touch/mouse event position relative to grid
+function getCellFromEvent(e) {
+  let clientX, clientY;
+  if (e.touches && e.touches.length > 0) {
+    const touch = e.touches[0];
+    clientX = touch.clientX;
+    clientY = touch.clientY;
+  } else if (e.changedTouches && e.changedTouches.length > 0) {
+    const touch = e.changedTouches[0];
+    clientX = touch.clientX;
+    clientY = touch.clientY;
+  } else if (e.clientX !== undefined) {
+    // Fallback for mouse events (though we won't use it here)
+    clientX = e.clientX;
+    clientY = e.clientY;
+  } else {
+    return null;
+  }
+
+  const rect = grid.getBoundingClientRect();
+  const x = clientX - rect.left;
+  const y = clientY - rect.top;
+  const padding = 8;
+  const cellSize = 50;  // 40px width/height + 10px total margin (5px each side)
+  const adjustedX = x - padding;
+  const adjustedY = y - padding;
+  const col = Math.floor(adjustedX / cellSize);
+  const row = Math.floor(adjustedY / cellSize);
+
+  if (row >= 0 && row < gridLetters.length && col >= 0 && col < 6) {  // 8 rows, 6 cols
+    return [row, col];
+  }
+  return null;
+}
+
+// Document-level handlers for touch drag (defined here so they're in scope)
+function handleDocumentTouchMove(e) {
+  e.preventDefault();
+  const pos = getCellFromEvent(e);
+  if (pos) {
+    const [r, c] = pos;
+    handleMouseMove(r, c, e);
+  }
+}
+
+function handleDocumentTouchEnd(e) {
+  e.preventDefault();
+  let endR = startR;
+  let endC = startC;  // Fallback to start if finger off-grid
+  const pos = getCellFromEvent(e);
+  if (pos) {
+    [endR, endC] = pos;
+  }
+  handleMouseUp(endR, endC);
+
+  // Clean up listeners
+  document.removeEventListener('touchmove', handleDocumentTouchMove, { passive: false });
+  document.removeEventListener('touchend', handleDocumentTouchEnd, { passive: false });
+}
 
 let found = new Set();
 let currentPath = [];
@@ -342,7 +411,9 @@ function handleMouseDown(r, c) {
 }
 
 function handleMouseMove(r, c, event) {
-  if (!mouseDown || event.buttons !== 1) return;
+  if (!mouseDown) return;
+  // For mouse: check buttons; for touch: skip (touchmove implies drag)
+  if (event.type === 'mousemove' && event.buttons !== 1) return;
   if (!hasMoved) {
     hasMoved = true;
     currentPath = [[startR, startC]];
@@ -459,9 +530,26 @@ gridLetters.forEach((rowLetters, r) => {
     const letDiv = document.createElement('div');
     letDiv.classList.add('letter');
     letDiv.textContent = letter;
+
+    // Mouse events (unchanged)
     letDiv.addEventListener('mousedown', () => handleMouseDown(r, c));
     letDiv.addEventListener('mousemove', (event) => handleMouseMove(r, c, event));
     letDiv.addEventListener('mouseup', () => handleMouseUp(r, c));
+
+    // Touch events (new)
+    letDiv.addEventListener('touchstart', (e) => {
+      e.preventDefault();
+      const pos = getCellFromEvent(e);
+      if (pos) {
+        const [tr, tc] = pos;  // Use calculated pos in case of slight offset
+        handleMouseDown(tr, tc);
+
+        // Capture drag on document for smooth movement across cells
+        document.addEventListener('touchmove', handleDocumentTouchMove, { passive: false });
+        document.addEventListener('touchend', handleDocumentTouchEnd, { passive: false });
+      }
+    }, { passive: false });
+
     row.appendChild(letDiv);
   });
   grid.appendChild(row);
@@ -483,6 +571,8 @@ window.addEventListener('mouseup', () => {
     hasMoved = false;
   }
 });
+
+document.addEventListener('touchcancel', handleDocumentTouchEnd, { passive: false });
 
 updateHintButton();
 </script>
